--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^5.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "scroll-into-view": "^1.9.3",
     "semantic-ui-react": "^0.79.1"
   },
   "devDependencies": {}
