--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gspld-test-client",
-  "version": "1.0.0",
+  "version": "0.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "next": "^5.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "resumablejs": "^1.1.0",
     "scroll-into-view": "^1.9.3",
     "semantic-ui-react": "^0.79.1"
   },
