--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gspld-test-client",
+  "name": "layman-test-client",
   "version": "0.6.0",
   "description": "",
   "main": "index.js",
