--- a/package.json
+++ b/package.json
@@ -14,12 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.5",
+    "connect-redis": "^3.4.2",
+    "dotenv": "^8.1.0",
     "express": "^4.16.3",
+    "express-session": "^1.16.2",
     "http-proxy-middleware": "^0.18.0",
     "isomorphic-unfetch": "^2.0.0",
     "next": "7.0.2",
+    "passport": "^0.4.0",
+    "passport-oauth2": "^1.5.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
+    "redis": "^2.8.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "resumablejs": "^1.1.0",
     "scroll-into-view": "^1.9.3",
     "semantic-ui-react": "0.83.0"
