Code management related to authn

--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,6 @@ LIFERAY_OAUTH2_CLIENT_ID=id-353ab09c-f117-f2d5-d3a3-85cfb89e6746
 LIFERAY_OAUTH2_SECRET=secret-d31a82c8-3e73-1058-e38a-f9191f7c2014
 LIFERAY_OAUTH2_AUTH_URL=http://localhost:8082/o/oauth2/authorize
 LIFERAY_OAUTH2_TOKEN_URL=http://localhost:8082/o/oauth2/token
-LIFERAY_OAUTH2_CALLBACK_URL=http://localhost:3000/auth/oauth2-liferay/callback
+LIFERAY_OAUTH2_CALLBACK_URL=http://localhost:3000/authn/oauth2-liferay/callback
 LAYMAN_USER_PROFILE_URL=http://localhost:8000/rest/current-user
+LAYMAN_REST_URL=http://localhost:8000
