--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,4 @@ LIFERAY_OAUTH2_TOKEN_URL=http://localhost:8082/o/oauth2/token
 LIFERAY_OAUTH2_CALLBACK_URL=http://localhost:3000/authn/oauth2-liferay/callback
 LAYMAN_USER_PROFILE_URL=http://localhost:8000/rest/current-user
 LAYMAN_REST_URL=http://localhost:8000
+LTC_BASEPATH=/client
