--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
     "bluebird": "^3.7.2",
+    "clean-html": "^1.5.0",
     "connect-redis": "^3.4.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
