--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
     "bluebird": "^3.7.2",
+    "clean-html": "^1.5.0",
     "connect-redis": "^3.4.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -33,7 +34,8 @@
     "request-promise-native": "^1.0.8",
     "resumablejs": "^1.1.0",
     "scroll-into-view": "^1.14.2",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "xml-formatter": "^2.3.0"
   },
   "devDependencies": {}
 }
