--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,13 @@ jobs:
         with:
           node-version: '11.x'
 
-      - name: Build
-        run: |
-          npm install
-          npm run build --if-present
-          npm test
+      - run: npm install
+        env:
+          CI: true
+      - run: npm run build
+        env:
+          CI: true
+      - run: npm test
         env:
           CI: true
 
