--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
 
       - run: npm install
       - run: npm run build
+        env:
+          LTC_BASEPATH: '/client'
 
       - name: Release zip
         run: |
