--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,10 @@ jobs:
         with:
           node-version: '11.x'
 
-      - run: npm install
-      - run: npm run build
+      - name: Build
+        run: |
+          npm install
+          npm run build
         env:
           LTC_BASEPATH: '/client'
 
@@ -23,5 +25,9 @@ jobs:
           rm -rf release.tar.gz
           touch release.tar.gz
           tar --exclude=release.tar.gz -zcf release.tar.gz * .env.sample
-        env:
-          LTC_BASEPATH: '/client'
+
+      - name: Store release.tar.gz
+        uses: actions/upload-artifact@v2
+        with:
+          name: release.tar.gz
+          path: release.tar.gz
