Make OAuth2 scope adjustable by environment variable

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ OAUTH2_LIFERAY_SECRET=secret-d31a82c8-3e73-1058-e38a-f9191f7c2014
 OAUTH2_LIFERAY_AUTH_URL=http://localhost:8082/o/oauth2/authorize
 OAUTH2_LIFERAY_TOKEN_URL=http://localhost:8082/o/oauth2/token
 OAUTH2_LIFERAY_CALLBACK_URL=http://localhost:3000/client/authn/oauth2-liferay/callback
+OAUTH2_LIFERAY_SCOPE=liferay-json-web-services.everything.read.userprofile
