--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
+    "lint": "next lint",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [],
@@ -32,5 +33,9 @@
     "scroll-into-view": "^1.16.2",
     "semantic-ui-react": "^2.1.4",
     "xml-formatter": "^3.2.0"
+  },
+  "devDependencies": {
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7"
   }
 }
