--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "redis": "^4.5.1",
     "resumablejs": "^1.1.0",
     "scroll-into-view": "^1.16.2",
-    "semantic-ui-react": "^2.1.4",
+    "semantic-ui-react": "^3.0.0-beta.2",
     "xml-formatter": "^3.2.0"
   },
   "devDependencies": {
