--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "layman-test-client",
-  "version": "2.0.0-dev",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
